@@ -16,7 +16,7 @@
       <firstname>Brenden</firstname>
       <surname>Matthews</surname>
     </author>
-    <date>2005-09-24</date>
+    <date>2005-10-17</date>
   </refentryinfo>
 
   <refmeta>
